--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -6,10 +6,8 @@ hide_table_of_contents: true
 
 # Snapblocks Documentation
 
-Snapblocks is a fork of [scratchblocks](https://scratchblocks.github.io/), but is made for [Snap<i>!</i>](https://snap.berkeley.edu/)
+Snapblocks is a fork of [scratchblocks](https://scratchblocks.github.io/) that adds all the features found in [Snap<i>!</i>](https://snap.berkeley.edu/)
 
-## Getting started
-
-If you want to know how to write snapblcoks, see [Syntax](/syntax)
+To learn how to write snapblocks, see [Writing Snapblocks](/writing-snapblocks)
 
 For library documentation for devs, see the [Library Documentation](/library)
